Fix z-index for some elements

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,7 +1,7 @@
 .pg-header {
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 99;
   background: var(--clr-white);
   border-bottom: 1px solid var(--clr-light-Grey);
 }
@@ -76,7 +76,7 @@
     right: 0;
     min-width: 170px;
     top: calc(100% + 8px);
-    z-index: 9;
+    z-index: 88;
     display: flex;
   }
 
